k3s/base/atlantis/atlantis.yaml
---
# Source: atlantis/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app: atlantis
    chart: atlantis-5.17.2
    helm.sh/chart: atlantis-5.17.2
    release: atlantis
    heritage: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4141
      protocol: TCP
      name: atlantis
  selector:
    app: atlantis
    release: atlantis
---
# Source: atlantis/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app: atlantis
    chart: atlantis-5.17.2
    helm.sh/chart: atlantis-5.17.2
    release: atlantis
    heritage: Helm
spec:
  serviceName: atlantis
  replicas: 1
  selector:
    matchLabels:
      app: atlantis
      release: atlantis
  template:
    metadata:
      labels:
        app: atlantis
        release: atlantis
      annotations:
        checksum/config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/repo-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      hostNetwork: false
      serviceAccountName: atlantis
      shareProcessNamespace: false
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsUser: 100
      volumes:
        - name: atlantis-data
          persistentVolumeClaim:
            claimName: atlantis-data
      containers:
        - name: atlantis
          image: "ghcr.io/runatlantis/atlantis:v0.34.0"
          imagePullPolicy: Always
          args:
            - server
          ports:
            - name: atlantis
              containerPort: 4141
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: atlantis-data
              mountPath: /atlantis-data
          resources: {}
---
# Source: atlantis/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app: atlantis
    chart: atlantis-5.17.2
    helm.sh/chart: atlantis-5.17.2
    release: atlantis
    heritage: Helm
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              service:
                name: atlantis
                port:
                  number: 80
            pathType: ImplementationSpecific
---
# Source: atlantis/templates/tests/test-atlantis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "atlantis-ui-test"
  namespace: atlantis
  annotations:
    helm.sh/hook: test
spec:
  containers:
    - name: atlantis-ui-test
      image: bats/bats:1.9.0
      command: ["/usr/local/bin/bats", "/tests/"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
  volumes:
    - name: tests
      configMap:
        name: atlantis-tests
  restartPolicy: Never
